--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         
         <div class="nav-bar">
             <ul>
-                <li><a href="#" class="menu">Menu</a></li>
-                <li><a href="#" class="hidden">Home</a></li>
-                <li><a href="#" class="hidden">Store</a></li>
-                <li><a href="#" class="hidden">Mac</a></li>
-                <li><a href="#" class="hidden">iPhone</a></li>
-                <li><a href="#" class="hidden">iPad</a></li>
-                <li><a href="#" class="hidden">Watch</a></li>
-                <li><a href="#" class="hidden">AirPods</a></li>
-                <li><a href="#" class="hidden">TV & Home</a></li>
-                <li><a href="#" class="hidden">Only on Apple</a></li>
-                <li><a href="#" class="hidden">Accessories</a></li>
-                <li><a href="#" class="hidden">Support</a></li>
+                <li class="menu-list-item" ><a href="#" class="menu">Menu</a></li>
+                <li><a href="#" class="nav">Home</a></li>
+                <li><a href="#" class="nav">Store</a></li>
+                <li><a href="#" class="nav">Mac</a></li>
+                <li><a href="#" class="nav">iPhone</a></li>
+                <li><a href="#" class="nav">iPad</a></li>
+                <li><a href="#" class="nav">Watch</a></li>
+                <li><a href="#" class="nav">AirPods</a></li>
+                <li><a href="#" class="nav">TV & Home</a></li>
+                <li><a href="#" class="nav">Only on Apple</a></li>
+                <li><a href="#" class="nav">Accessories</a></li>
+                <li><a href="#" class="nav">Support</a></li>
             </ul>
         </div>
 
